# icn-v2

./: .editorconfig  .gitignore  404.html  CNAME  COMMAND_REFERENCE.md  Cargo.toml  DEMO_SYSTEM_SUMMARY.md  HELP.md  ICN_DEMO_README.md  KNOWN_ISSUES.md  LICENSE  MERGE_PREPARATION.md  MERGE_SUMMARY.md  Makefile  OBSERVABILITY_CHECKLIST.md  PRE_MERGE_VERIFICATION.md  README.md  SUMMARY.html  book.toml  chapter_1.html  demo.sh  icn_demo.sh  index.html  index.md  justfile  mesh_verification.md  mkdocs.yml  node-key.json  package.json  print.html  run_demo_flow.sh  run_mesh_demo.sh  searchindex.js  toc.html  toc.js
.github/: CONTRIBUTING.md  (+1 more)
crates/agoranet/agoranet-core/: Cargo.toml  README.md
crates/agoranet/agoranet-core/src/: error.rs  forwarder.rs  lib.rs  message.rs  storage.rs  thread.rs
crates/agoranet/agoranet-core/src/storage/: rocks.rs
crates/agoranet/agoranet-core/tests/: thread_tests.rs
crates/ccl/icn-ccl-compiler/: Cargo.toml  README.md
crates/ccl/icn-ccl-compiler/src/: lib.rs
crates/ccl/icn-ccl-compiler/tests/: compiler_test.rs
crates/ccl/icn-ccl-parser/: Cargo.toml  README.md
crates/ccl/icn-ccl-parser/grammar/: ccl.pest
crates/ccl/icn-ccl-parser/src/: ast.rs  lib.rs
crates/ccl/icn-ccl-parser/tests/: parser_test.rs
crates/common/icn-core-types/: Cargo.toml  README.md
crates/common/icn-core-types/src/: cid.rs  cid_model.rs  did.rs  did_key.rs  lib.rs  quorum.rs
crates/common/icn-economics/: Cargo.toml  README.md
crates/common/icn-economics/src/: lib.rs  storage.rs  token.rs  transaction.rs
crates/common/icn-identity-core/: Cargo.toml  README.md
crates/common/icn-identity-core/src/: did.rs  did_type.rs  lib.rs  manifest.rs  quorum.rs  trustbundle.rs  vc.rs
crates/common/icn-identity-core/src/quorum/: engine.rs  mod.rs
crates/common/icn-identity-core/src/trustbundle/: mod.rs  storage.rs
crates/common/icn-identity-core/src/trustbundle/storage/: memory.rs  mod.rs  rocksdb.rs
crates/common/icn-identity-core/src/vc/: execution_receipt.rs  mod.rs  proposal.rs  vote.rs
crates/common/icn-identity-core/tests/: execution_receipt_test.rs  governance_credentials_test.rs  quorum_engine_test.rs  trustbundle_storage_test.rs  trustbundle_test.rs
crates/common/icn-types/: Cargo.toml  README.md
crates/common/icn-types/src/: anchor.rs  attestation.rs  bundle.rs  cid.rs  dag.rs  governance.rs  identity.rs  lib.rs  mesh.rs  policy.rs  quorum.rs  receipts.rs  resources.rs
crates/common/icn-types/src/dag/: event.rs  event_id.rs  event_type.rs  ipld.rs  memory.rs  merkle.rs  mod.rs  node.rs  payload.rs  rocksdb.rs  signed.rs  sync.rs  tests.rs  tests_async.rs
crates/common/icn-types/src/dag/sync/: bundle.rs  memory.rs  mod.rs  network.rs  tests.rs  transport.rs
crates/common/icn-types/tests/: dag_tests.rs
crates/planetary-mesh/: Cargo.toml  README.md
crates/planetary-mesh/src/: cap_index.rs  dispatch_credential.rs  lib.rs  manifest_verifier.rs  node.rs  revocation_notice.rs  scheduler.rs  trusted_did_policy.rs  types.rs
crates/runtime/icn-runtime/: Cargo.toml  README.md
crates/runtime/icn-runtime-node/: Cargo.toml
crates/runtime/icn-runtime-node/src/: lib.rs
crates/runtime/icn-runtime/src/: config.rs  dag_anchor.rs  dag_indexing.rs  dag_processor.rs  lib.rs  policy.rs
crates/runtime/icn-runtime/src/abi/: bindings.rs  context.rs  mod.rs
crates/runtime/icn-runtime/src/engine/: executor.rs  executor.rs.new  mod.rs  wasmtime_integration.rs
crates/runtime/icn-runtime/src/host/: mod.rs  policy.rs  receipt.rs
crates/runtime/icn-runtime/src/tests/: mod.rs  policy_tests.rs  policy_update_tests.rs
crates/runtime/icn-runtime/tests/: dag_anchor_test.old.rs  dag_anchor_test.rs  wasm_abi_test.rs  wasm_log_test.rs
crates/tools/icn-cli/: Cargo.toml  README.md
crates/tools/icn-cli/src/: cli.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  metrics.rs
crates/tools/icn-cli/src/commands/: agora.rs  bundle.rs  community.rs  coop.rs  dag.rs  doctor.rs  federation.rs  gen_cli_docs.rs  keygen.rs  mesh.rs  mod.rs  observability.rs  policy.rs  proposal.rs  receipt.rs  runtime.rs  scope.rs  sync_p2p.rs  vote.rs
crates/tools/icn-cli/src/commands/dag/: submit.rs
crates/tools/icn-cli/src/commands/federation/: bootstrap.rs  export.rs  import.rs  mod.rs  proposal.rs  start.rs  verify.rs
crates/tools/icn-cli/tests/: federation_bootstrap_test.rs  federation_export_test.rs  federation_import_test.rs  federation_verify_test.rs
crates/wallet/icn-wallet/: Cargo.toml  README.md  build.rs
crates/wallet/icn-wallet/examples/: verify_cli.rs
crates/wallet/icn-wallet/src/: icn-wallet.udl  lib.rs  receipt_store.rs  verification.rs
crates/wallet/icn-wallet/src/mobile/: App.tsx  README.md  credential_import.tsx  mod.rs  receipt.rs  uniffi.udl  verification_card.tsx  wallet_screen.tsx
crates/wallet/icn-wallet/src/receipt_store/: in_memory.rs
icn-v3/: Cargo.toml  README.md
icn-v3/crates/ccl/: Cargo.toml
icn-v3/crates/ccl/src/: attestation.rs  cooperative.rs  error.rs  federation.rs  governance.rs  lib.rs  quorum.rs  recovery.rs  tests.rs
icn-v3/crates/common/: Cargo.toml
icn-v3/crates/common/src/: dag.rs  error.rs  identity.rs  lib.rs  resource.rs  verification.rs
icn-v3/crates/runtime/: Cargo.toml
icn-v3/crates/runtime/src/: config.rs  error.rs  executor.rs  host.rs  lib.rs  metering.rs
icn-v3/crates/services/: Cargo.toml
icn-v3/crates/services/src/: error.rs  lib.rs
icn-v3/crates/services/src/dag/: mod.rs  storage.rs  tests.rs  verifier.rs
icn-v3/crates/services/storage/: Cargo.toml  README.md
icn-v3/crates/services/storage/src/: lib.rs  prelude.rs  rocksdb_dag_store.rs  runtime_integration.rs  tests.rs
icn-v3/docs/: SCOPED_POLICY_ENFORCEMENT.md
icn-v3/scripts/: test_storage.sh
tests/: Cargo.toml
tests/fixtures/: federation_icn.toml
tests/integration/: Cargo.toml  community_test.rs  cross_coop_test.rs  dag_storage_tests.rs  dag_store_task_receipt.rs  economics_test.rs  federation_node_test.rs  governance_proposal_flow.rs  join_federation_test.rs  runtime_execution_test.rs  wasmtime_integration_test.rs
(+148 files in other folders)
