[workspace]
members = [
    "crates/common/icn-core-types",
    "crates/common/icn-types",
    "crates/common/icn-identity-core",
    "crates/runtime/icn-runtime",
    "crates/planetary-mesh",
    "crates/wallet/icn-wallet",
    "crates/tools/icn-cli",
    "tests"
]
resolver = "2"

# Optional: Configure profiles for the workspace
# [profile.release]
# # opt-level = 'z' # Optimize for size
# # lto = true
# # codegen-units = 1
