[workspace]
members = [
    "crates/common/icn-core-types",
    "crates/common/icn-types",
    "crates/common/icn-identity-core",
    "crates/common/icn-economics",
    "crates/runtime/icn-runtime",
    "crates/planetary-mesh",
    "crates/wallet/icn-wallet",
    "crates/tools/icn-cli",
    "tools/gen-crate-map",
    "tests",
    "tests/integration"
]
resolver = "2"

# Optional: Configure profiles for the workspace
# [profile.release]
# # opt-level = 'z' # Optimize for size
# # lto = true
# # codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"
multihash = "0.18" # For mock_cid

[[bench]]
name = "dag_benchmarks" # Benchmark binary name
harness = false           # Required for criterion
path = "benches/dag.rs"   # Path to the benchmark file
