[workspace]
members = [
    "crates/agoranet/agoranet-core",
    "crates/ccl/icn-ccl-compiler",
    "crates/ccl/icn-ccl-parser",
    "crates/common/icn-core-types",
    "crates/common/icn-economics",
    "crates/common/icn-identity-core",
    "crates/common/icn-types",
    "crates/planetary-mesh",
    "crates/runtime/icn-runtime",
    "crates/tools/icn-cli",
    "crates/wallet/icn-wallet",
    "tests",
    "tools/gen-crate-map", "tools/gen-crate-readmes",
]
resolver = "2"

# Optional: Configure profiles for the workspace
# [profile.release]
# # opt-level = 'z' # Optimize for size
# # lto = true
# # codegen-units = 1

# [patch.crates-io]
# ed25519-dalek = { version = "=2.1.1" }
