[workspace]
members = [
    "crates/ccl",
    "crates/common",
    "crates/p2p",
    "crates/runtime",
    "crates/services",
    "crates/services/storage",
    "crates/wallet",
    "crates/tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matt Faherty"]
license = "AGPL-3.0-only"
repository = "https://github.com/mfaherty/icn-v3"
description = "Inter-Cooperative Network v3: A planetary-scale governance, identity, and compute stack"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"

# WASM runtime
wasmtime = "17.0"

# P2P networking
libp2p = "0.53"

# Future semantic considerations
once_cell = "1.18"
futures = "0.3" 