[package]
name = "icn-integration-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for the Intercooperative Network (ICN)"
license = "MIT"
publish = false

[dependencies]
icn-identity-core = { path = "../crates/common/icn-identity-core" }
icn-types = { path = "../crates/common/icn-types" }
icn-runtime = { path = "../crates/runtime/icn-runtime" }
icn-cli = { path = "../crates/tools/icn-cli" }
icn-services-storage = { path = "../crates/services/storage" }

# Additional dependencies
async-trait = "0.1"
tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
anyhow = "1.0"

[[test]]
name = "governance_proposal_flow"
path = "integration/governance_proposal_flow.rs"

[[test]]
name = "dag_storage_tests"
path = "integration/dag_storage_tests.rs" 