[package]
name = "planetary-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
# ICN dependencies
icn-types = { path = "../common/icn-types", features = ["persistence", "async"] }
icn-identity-core = { path = "../common/icn-identity-core" }

# Async/networking
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
rand = "0.8"

# System info
sys-info = "0.9"
num_cpus = "1.16" 