[package]
name = "planetary-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
# ICN dependencies
icn-types = { path = "../common/icn-types", features = ["persistence", "async"] }
icn-identity-core = { path = "../common/icn-identity-core" }
icn-core-types = { path = "../common/icn-core-types" }

# Async/networking
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
rand = "0.8"
ed25519-dalek = { version = "2.0.0", features = ["serde"] }
hex = "0.4"
multibase = "0.9"
sha2 = "0.10"

# System info
sys-info = "0.9"
num_cpus = "1.16"

# Logging and metrics
log = "0.4"
prometheus = { version = "0.13", features = ["process"] }

# Other
uuid = { version = "1.6", features = ["v4"] }
toml = "0.8"
lazy_static = "1.4"

[features]
metrics = []
http-api = [] 