[package]
name = "agoranet-core"
version = "0.1.0"
edition = "2021"
description = "ICN Deliberation Layer (AgoraNet)"
license = "MIT OR Apache-2.0" # Consistent with other icn crates
repository = "https://github.com/InterCooperative-Network/icn-v2" # Assuming, adjust if different

[features]
default = ["async", "persistence"] # As suggested
async = ["dep:tokio", "dep:async-trait", "dep:futures"]
persistence = ["dep:rocksdb", "async"] # Persistence implies async

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"] } # Needed for timestamps
cid = { package = "cid", version = "0.11" } # Using package alias for clarity if needed later
futures = { version = "0.3", optional = true }
hex = "0.4"
lazy_static = { version = "1.4", optional = true } # Often used with persistence/DB handles
log = "0.4"
# Using path for workspace dependencies
icn-core-types = { path = "../../common/icn-core-types" }
icn-identity-core = { path = "../../common/icn-identity-core" } # For Did
icn-types = { path = "../../common/icn-types" } # For DagSync trait eventually, common types

# Optional persistence
rocksdb = { version = "0.21.0", optional = true }
sha2 = "0.10" # For CID generation

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ipld_dagcbor = "0.6" # For IPLD (DAG-CBOR)
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"], optional = true }
tracing = "0.1" # Added for logging in forwarder

[dev-dependencies]
tokio = { version = "1", features = ["full"] } # For tests
