[package]
name = "agoranet-core"
version = "0.1.0"
edition = "2021"
description = "Core types and logic for the AgoraNet deliberation layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/icn-v2" # TODO: Update repo URL
readme = "README.md"
keywords = ["consensus", "deliberation", "ipld", "did", "ssi"]
categories = ["data-structures", "cryptography"]

[features]
# Default features - adjust as needed
default = ["ipld"] 
# Feature for enabling IPLD codec support (currently required)
ipld = ["dep:serde_ipld_dagcbor", "dep:libipld", "dep:cid", "dep:multihash"]
# Feature for enabling persistent storage via RocksDB
persistence = ["dep:rocksdb", "dep:once_cell"]

[dependencies]
# Core ICN types (conditionally enable if needed, maybe just via feature?)
icn-core-types = { path = "../../common/icn-core-types" }

# IPLD & Related (enabled via 'ipld' feature)
serde_ipld_dagcbor = { version = "0.4", optional = true }
libipld = { version = "0.16", features = ["serde-codec"], optional = true } 
cid = { version = "0.11.1", optional = true }
multihash = { version = "0.19.0", features = ["serde"], optional = true }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For potential debugging or simple formats

# Cryptography (Placeholder - Use icn-identity-core for real crypto)
ed25519-dalek = { version = "2.0", features = ["serde"], optional = true } 

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
lazy_static = "1.4" # Used in CLI, consider removing if RocksDB singleton is handled differently
hex = "0.4"
sha2 = "0.10"

# Persistence Dependencies (optional)
rocksdb = { version = "0.21", optional = true }
once_cell = { version = "1", optional = true } # For initializing the global DB instance

[dev-dependencies]
env_logger = "0.11"
test-log = { version = "0.2", features = ["trace"] } # Enables logging during tests
# tokio = { version = "1", features = ["full"] } # Already have tokio as optional dep
