[package]
name         = "icn-ccl-parser"
version      = "0.1.0"
edition      = "2021"
description  = "Pest grammar + AST for ICN Contract-Chain Language"
license      = "MIT"

[dependencies]
pest          = "2.7"
pest_derive   = "2.7"
thiserror     = "1.0"
serde         = { version = "1.0", features = ["derive"] } 