[package]
name = "icn-economics"
version = "0.1.0"
edition = "2021"
description = "Economic primitives for the InterCooperative Network"

[dependencies]
# ICN dependencies
icn-types = { path = "../icn-types", features = ["persistence", "async"] }
icn-identity-core = { path = "../icn-identity-core" }
icn-core-types = { path = "../icn-core-types" }

# Async/networking
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
ed25519-dalek = { version = "2.0.0", features = ["serde"] }

# Logging and metrics
log = "0.4"
prometheus = { version = "0.13", features = ["process"] }

# Storage
rocksdb = { version = "0.21.0", optional = true }

[features]
persistence = ["rocksdb"]
async = ["tokio"] 