[package]
name = "icn-identity-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
multibase = "0.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
num_cpus = "1.16"
sys-info = "0.9"
icn-core-types = { path = "../icn-core-types" }
sha2 = "0.10"
icn-types = { path = "../icn-types" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
