[package]
name = "icn-identity-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ipld_dagcbor = { version = "0.5" }
thiserror = "1.0"
multibase = "0.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
num_cpus = "1.16"
sys-info = "0.9"
icn-core-types = { path = "../icn-core-types" }
sha2 = "0.10"
icn-types = { path = "../icn-types", features = ["ipld"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
# Optional dependencies
rocksdb = { version = "0.21", optional = true }
cid = { version = "0.11.1" }
multihash = { version = "0.19.3", features = ["serde-codec"] }

[features]
default = []
persistence = ["rocksdb"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "full"] }
