[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
multihash = { version = "0.18", features = ["serde"] }
cid = { version = "0.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
multibase = "0.9"
rand = "0.8"
rocksdb = { version = "0.20", optional = true }
async-trait = "0.1"
tokio = { version = "1.27", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.27", features = ["full", "test-util"] }
futures = "0.3"

[features]
default = []
async = ["tokio", "futures", "async-trait"]
persistence = ["rocksdb", "tokio", "futures"]
