[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
multihash = { version = "0.18", features = ["serde"] }
cid = { version = "0.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
multibase = "0.9"
rand = "0.8"
rocksdb = { version = "0.21", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
serde_ipld_dagcbor = "0.2"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Optional libp2p dependencies
libp2p = { version = "0.53.2", features = ["tokio", "noise", "gossipsub", "mdns", "kad", "identify", "ping", "request-response"], optional = true }
libp2p-identity = { version = "0.2", features = ["ed25519"], optional = true }
libp2p-swarm = { version = "0.44", optional = true }

[dev-dependencies]
tokio = { version = "1.27", features = ["full", "test-util"] }
futures = "0.3"

[features]
default = []
async = ["tokio", "futures", "async-trait"]
persistence = ["rocksdb", "tokio", "futures"]
networking = ["libp2p", "libp2p-identity", "libp2p-swarm", "tokio", "futures", "async-trait"]
