[package]
name = "icn-runtime-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
libp2p = {
    version = "0.52",
    features = [
        "gossipsub",
        "tcp",
        "dns",
        "yamux",
        "mplex",
        "macros",
        "identify",
        "kad",
        "mdns",
        "tokio",
        "ping",
        "noise"
    ]
}
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
icn-types = { path = "../../common/icn-types", features=["ipld"] }
icn-runtime = { path = "../icn-runtime" }
icn-config = { path = "../../common/icn-config" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ipld_dagcbor = "0.5"
base64 = "0.22"
blake3 = "1.5"
hex = "0.4"
# Add other necessary dependencies as implementations are filled out, e.g.:
# icn-identity-core = { path = "../../common/icn-identity-core" }
# rocksdb = { version = "0.21", optional = true }
# sled = "0.34" # If runtime node needs its own sled instance separate from icn-runtime's 

[dev-dependencies]
# ... existing dev-dependencies ... 