[package]
name = "icn-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "12", features = ["wat", "async"] }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
icn-types = { path = "../../common/icn-types" }
icn-identity-core = { path = "../../common/icn-identity-core" }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"

[dev-dependencies]
wat = "1.0"
