[package]
name = "icn-cli"
version = "0.1.0"
edition = "2021"

# Add features section
[features]
default = ["mesh"]
mesh = ["planetary-mesh"]
persistence = ["icn-identity-core/persistence"] # Enable persistence in dependencies

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add metrics dependencies
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
# tokio-metrics = "0.2" # Removed due to feature conflict with tokio >= 1.26
hyper = { version = "0.14", features = ["server", "http1"] }

icn-types = { path = "../../common/icn-types", features = ["persistence", "async"] }
icn-identity-core = { path = "../../common/icn-identity-core" }
icn-core-types = { path = "../../common/icn-core-types" }
planetary-mesh = { path = "../../planetary-mesh", optional = true }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
cid = "0.10"
multihash = "0.18"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0.1"
anyhow = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.0.0", features = ["serde"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
hex = "0.4"
icn-wallet = { path = "../../wallet/icn-wallet" }
multibase = "0.9"
base64 = "0.22"
colored = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
# Add any build-time dependencies here if needed

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
