[package]
name = "icn-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM runtime for the Inter-Cooperative Network"

[dependencies]
# Internal crates
icn-common = { path = "../common" }
icn-services = { path = "../services" }

# Serialization and error handling
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Async utilities
tokio = { workspace = true }
async-trait = { workspace = true }

# WASM runtime
wasmtime = { workspace = true }
wasmtime-wasi = "17.0"

# Cryptography
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

# Utility
tracing = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
wat = "1.0" 