[package]
name = "icn-storage"
version = "0.1.0"
edition = "2021"
description = "Persistent storage services for the Inter-Cooperative Network"

[dependencies]
icn-common = { path = "../../common" }
icn-services = { path = ".." }
rocksdb = "0.20.1"
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
hex = "0.4.3"
uuid = { version = "1.3.3", features = ["v4", "serde"] } 